@@ -67,7 +67,7 @@ static struct Bool_Opt
 #else
 	{"BIOS", (boolean *)0, FALSE, SET_IN_FILE},
 #endif
-	{"bones", &iflags.bones, TRUE, SET_IN_FILE},
+	{"bones", &flags.bones, TRUE, SET_IN_FILE},
 #ifdef INSURANCE
 	{"checkpoint", &flags.ins_chkpt, TRUE, SET_IN_FILE},
 #else
