@@ -3,6 +3,7 @@
 	* Blessed scrolls of magic mapping reveal objects
 	* Dump log: show same information on final dump as wizard mode
 	* Minotaurs respect Elbereth
+	* Bones level tracking
 
 	* new dungeon features:
 	  - muddy swamp (from NetHack Brass)
